# dbd2netcdf-python

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  PERFORMANCE_REPORT.md  README.md  benchmark_performance.py  dbd2nc.py  mkOne.py  pyproject.toml  setup.py
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
conda/: recipe.yaml
csrc/: ColumnData.C  ColumnData.H  Decompress.C  KnownBytes.C  Logger.H  config.h  dbd_python.cpp
dbd_files/: 01220000.dbd  01220000.dcd  01220000.ecd  01330000.dbd  01330000.dcd  01330000.ecd  01330000.scd  01330000.tcd  01330001.dbd  01330001.dcd  01330001.ecd  01330001.scd  01330001.tcd  01330002.dbd  01330002.dcd  01330002.ecd  01330002.scd  01330002.tcd  01330003.dbd  01330003.dcd  01330003.ecd  01330003.scd  01330003.tcd  01330004.dbd  01330004.dcd  01330004.ecd  01330004.scd  01330004.tcd  01330005.dbd  01330005.dcd  01330005.ecd  01330005.scd  01330005.tcd  01330006.dbd  01330006.dcd  01330006.ecd  01330006.scd  01330006.tcd  01330007.dbd  01330007.dcd  (+48 more)
dbd_files/cache/: 00cda96e  032f60a0.cac  034e455d  03d49c30.cac  0583e418  067c8acd.cac  076d03b2.cac  08022a29.cac  08cb9702.cac  0FC53E97  0a7f0f30.cac  0a84fc5c.cac  0b7b054b.cac  0db0ad71.cac  0ed898aa  1052EE5C  105FABBD  10c5fd67.cac  115110d8.cac  11d38bfd  11f142b6.ccc  1373b1e3.cac  138d2a7d.cac  14840BE2  15510865.cac  169277EB  175d7cf5  17c0403b.cac  1968db84  1ebcb442.cac  1f1d68a1.cac  1f45c80c.cac  20876477.cac  2100ecf1.cac  21ac8eb4.cac  22fe3759.cac  256e0d3e  265628ea.cac  26D5A00F  2755d4c0  (+224 more)
docs/: STATUS.md  SYNC.md  performance.md
examples/: Examples.md  README.md  advanced_usage.py  load_multiple_files.py  load_single_file.py  plot_dive_profile.py  using_cli_tools.sh
scripts/: README.md  benchmark_comparison.py  check_cpp_changes.py  check_dcd_diff.py  compare_with_cpp.sh  debug_bits.py  debug_compressed.py  debug_compressed2.py  debug_criteria.py  debug_decompression.py  debug_full_file.py  debug_reader.py  debug_reader2.py  debug_reader3.py  debug_reader4.py  debug_reader5.py  debug_reader6.py  debug_stopping.py  trace_positions.py
scripts/debug/: debug_criteria.py  debug_full_file.py  debug_reader.py  debug_reader6.py
tests/: compare_first_values.py  compare_performance.py  conftest.py  test_backend.py  test_cli.py  test_compat.py  test_cpp_backend.py  test_dbd2nc.py  test_dbdreader2.py  test_exact_stop_point.py  test_frame_count.py  test_full_decompress.py  test_real_files.py  test_with_available.py  test_with_logging.py  test_xarray_dbd.py
xarray_dbd/: __init__.py  _dbd_cpp.pyi  backend.py  compat.py  decompression.py  header.py  reader.py  sensor.py
xarray_dbd/cli/: cache.py  csv.py  dbd2nc.py  logger.py  main.py  missions.py  mkone.py  sensors.py
xarray_dbd/dbdreader2/: __init__.py  _cache.py  _core.py  _errors.py  _list.py  _util.py
