[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "xarray-dbd"
version = "0.1.0"
description = "Efficient xarray backend for reading glider DBD files"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["License.txt"]
authors = [
    {name = "Pat Welch", email = "pat@mousebrains.com"}
]
keywords = ["glider", "oceanography", "dbd", "slocum", "xarray", "netcdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.23,<3.0",
    "xarray>=2023.6.0",
    "netCDF4>=1.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "scipy>=1.11",
]
lint = [
    "ruff>=0.8.0",
    "mypy>=1.13",
]
dev = [
    "xarray-dbd[test,lint]",
]

[project.scripts]
xdbd = "xarray_dbd.cli.main:main"

[project.urls]
Homepage = "https://github.com/mousebrains/dbd2netcdf-python"
Repository = "https://github.com/mousebrains/dbd2netcdf-python"
Issues = "https://github.com/mousebrains/dbd2netcdf-python/issues"
Changelog = "https://github.com/mousebrains/dbd2netcdf-python/blob/main/CHANGELOG.md"

[project.entry-points."xarray.backends"]
dbd = "xarray_dbd.backend:DBDBackendEntrypoint"

[tool.scikit-build]
wheel.packages = ["xarray_dbd"]
cmake.build-type = "Release"
sdist.include = [
    "csrc/",
    "CMakeLists.txt",
    "xarray_dbd/",
    "tests/",
    "pyproject.toml",
    "README.md",
    "License.txt",
    "CHANGELOG.md",
]
sdist.exclude = [
    "dbd_files/",
    "scripts/",
    "docs/",
    "examples/",
    ".benchmarks/",
    ".github/",
    "CLAUDE.md",
    "PERFORMANCE_REPORT.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "build",
    "scripts",
    "dbd2netcdf",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Disabled to reduce noise from xarray integration
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Disabled to allow targeted ignores
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["lz4.*", "xarray.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*-musllinux_i686", "*-win32", "pp*"]
test-skip = ["*-manylinux_aarch64", "*-musllinux_aarch64"]
enable = ["cpython-freethreading"]
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
